feat(dealer): 딜러 피치 기능 추가