@@ -1,23 +1,34 @@
 package blackjack.domain;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Trump {
 
     private final List<Card> deck;
 
     public Trump() {
-        deck = generateDeck();
+        deck = generateShuffledDeck();
     }
 
-    private List<Card> generateDeck() {
+    private List<Card> generateShuffledDeck() {
         List<Suit> suits = Suit.all();
         List<Denomination> denominations = Denomination.all();
 
         return suits.stream()
             .flatMap(item1 -> denominations.stream()
                 .map(item2 -> new Card(item1, item2)))
-            .toList();
+            .collect(Collectors.collectingAndThen(
+                Collectors.toList(),
+                list -> {
+                    Collections.shuffle(list);
+                    return list;
+                }
+            ));
+    }
 
+    public Card draw() {
+        return deck.removeLast();
     }
 }
